@@ -25,15 +25,15 @@ $filterdef = bless ([
 			  ['dest', 'c', 1],
 			  ['info', 't', 2],
 			  ['group', 't', 3],
+			  ['origin', 'c', 4],
 			  ['wx', 't', 5],
-			  ['origin', 'c', 7, 4],
-			  ['origin_dxcc', 'c', 10],
-			  ['origin_itu', 'c', 11],
-			  ['origin_itu', 'c', 12],
+			  ['channel', 'n', 6],
 			  ['by_dxcc', 'n', 7],
 			  ['by_itu', 'n', 8],
 			  ['by_zone', 'n', 9],
-			  ['channel', 'n', 6],
+			  ['origin_dxcc', 'c', 10],
+			  ['origin_itu', 'c', 11],
+			  ['origin_itu', 'c', 12],
 			 ], 'Filter::Cmd');
 
 
